--- a/DonationClient/build.gradle
+++ b/DonationClient/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     compile project(':DonationServices')
 
     compile 'org.springframework:spring-context:5.0.4.RELEASE'
+    compile group: 'com.jfoenix', name: 'jfoenix', version: '8.0.3'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
