--- a/DonationClient/build.gradle
+++ b/DonationClient/build.gradle
@@ -17,6 +17,18 @@ dependencies {
 
     compile 'org.springframework:spring-context:5.0.4.RELEASE'
     compile group: 'com.jfoenix', name: 'jfoenix', version: '8.0.3'
+    compile group: 'de.jensd', name: 'fontawesomefx', version: '8.9'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+jar {
+    manifest {
+        attributes('Main-Class':'donation.client.StartClient')
+    }
+    from {
+        configurations.compile.collect {
+            it.isDirectory() ? it:zipTree(it)
+        }
+    }
 }
