--- a/DonationModel/build.gradle
+++ b/DonationModel/build.gradle
@@ -11,4 +11,5 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'org.hibernate', name: 'hibernate-gradle-plugin', version: '5.2.16.Final'
 }
