--- a/DonationPersistence/build.gradle
+++ b/DonationPersistence/build.gradle
@@ -12,4 +12,5 @@ repositories {
 dependencies {
     compile project(':DonationModel')
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'org.hibernate', name: 'hibernate-gradle-plugin', version: '5.2.16.Final'
 }
