--- a/DonationPersistence/build.gradle
+++ b/DonationPersistence/build.gradle
@@ -13,4 +13,5 @@ dependencies {
     compile project(':DonationModel')
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.hibernate', name: 'hibernate-gradle-plugin', version: '5.2.16.Final'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.13'
 }
