--- a/DonationServices/build.gradle
+++ b/DonationServices/build.gradle
@@ -10,6 +10,8 @@ repositories {
 }
 
 dependencies {
+    implementation project(path: ':DonationModel', configuration: 'default')
+
     compile project(':DonationModel')
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
