--- a/DonationClient/build.gradle
+++ b/DonationClient/build.gradle
@@ -7,26 +7,23 @@ apply plugin: 'application'
 sourceCompatibility = 1.8
 mainClassName = "donation.client.StartClient"
 
-jar {
-    manifest {
-        attributes('Main-Class':'donation.client.StartClient')
-    }
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-}
-
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    implementation project(path: ':DonationModel', configuration: 'default')
+    implementation project(path: ':DonationServices', configuration: 'default')
+
     compile project(':DonationModel')
     compile project(':DonationServices')
 
     compile 'org.springframework:spring-context:5.0.4.RELEASE'
     compile group: 'com.jfoenix', name: 'jfoenix', version: '8.0.3'
     compile group: 'de.jensd', name: 'fontawesomefx', version: '8.9'
+
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.10.0'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.10.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
@@ -36,8 +33,6 @@ jar {
         attributes('Main-Class':'donation.client.StartClient')
     }
     from {
-        configurations.compile.collect {
-            it.isDirectory() ? it:zipTree(it)
-        }
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
