--- a/DonationServer/build.gradle
+++ b/DonationServer/build.gradle
@@ -39,10 +39,13 @@ dependencies {
     compile "org.slf4j:slf4j-simple:1.6.1"
 
 //    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.11'
-//    compile group: 'javax.activation', name: 'activation', version: '1.1.1'
-//    compile group: 'org.glassfish.jaxb', name: 'jaxb-core', version: '2.3.0'
-//    compile group: 'javax.xml', name: 'jaxb-impl', version: '2.1'
-//    compile group: 'org.w3c', name: 'dom', version: '2.3.0-jaxb-1.0.6'
+    compile group: 'javax.activation', name: 'activation', version: '1.1.1'
+    compile group: 'org.glassfish.jaxb', name: 'jaxb-core', version: '2.3.0'
+    compile group: 'javax.xml', name: 'jaxb-impl', version: '2.1'
+    compile group: 'org.w3c', name: 'dom', version: '2.3.0-jaxb-1.0.6'
+
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.10.0'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.10.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
